--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,7 @@ h3.expyear {
 	background-color: var(--darkgray);
 	padding: 200px 0px;
 	color: white;
-	background-image: url('/images/work.webp');
+	background-image: url('/images/newwork.png');
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: left center;
@@ -689,7 +689,7 @@ ul.foo-nav li {
 	.blank {
 		width: 100%;
 		height: 400px;
-		background-image: url('/images/work.webp');
+		background-image: url('/images/newwork.png');
 		background-size: 100%;
 		background-repeat: no-repeat;
 		background-position: left center;
