--- a/css/style.css
+++ b/css/style.css
@@ -689,7 +689,7 @@ ul.foo-nav li {
 	.blank {
 		width: 100%;
 		height: 400px;
-		background-image: url('/images/newwork.png');
+		background-image: url('https://xtanyax.github.io/devcodeportfolio/images/newwork.png');
 		background-size: 100%;
 		background-repeat: no-repeat;
 		background-position: left center;
