--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,7 @@ h3.expyear {
 	background-color: var(--darkgray);
 	padding: 200px 0px;
 	color: white;
-	background-image: url('/images/newwork.png');
+	background-image: url('https://xtanyax.github.io/devcodeportfolio/images/newwork.png');
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: left center;
