--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ h3.expyear {
 .projectoffer {
 	background-color: var(--dark);
 	color: white;
-	background-image: url('/images/codes.webp');
+	background-image: url('https://images.pexels.com/photos/270404/pexels-photo-270404.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
 	background-size: cover;
 	box-shadow: inset 0 0 0 2000px rgba(14, 14, 14, 0.9);
 }
